crates/tuna/tests/parser/fail/malformed-kw-binary.som
"test:
fail-message:
  contains: keyword selector
"

MalformedKwBinary = (
  run = (
    #c:++.
  )
)
